fix extra padding on left side of icons

--- a/data/styles/AppInfoView.css
+++ b/data/styles/AppInfoView.css
@@ -3,8 +3,14 @@
  * SPDX-FileCopyrightText: 2023 elementary, Inc. (https://elementary.io)
  */
 
-appinfoview .banner clamp {
-    padding: 1.333rem; /*12px*/;
+appinfoview:dir(ltr) .banner clamp > box {
+    margin: 1.333rem; /*12px*/;
+    margin-left: calc(1.333rem - 12px); /*Offset space inside icon*/;
+}
+
+appinfoview:dir(rtl) .banner clamp > box {
+    margin: 1.333rem; /*12px*/;
+    margin-right: calc(1.333rem - 12px); /*Offset space inside icon*/;
 }
 
 appinfoview .banner combobox {
